# wagner-law-dashboard

./: README.md  pyproject.toml  requirements.txt
src/wagner_law/: __init__.py  app.py  charts.py  data_loader.py
